bk_ida/gccida/g1/flow_loop_dump
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/flow_loop_dump/src/cfgloop.c:583:7: error: expected expression
if (  struct loop && loop->header ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/flow_loop_dump/src/cfgloop.c:634:16: error: use of undeclared identifier 'asc_6376CF'
fprintf( file, asc_6376CF, ( unsigned int)loop->num_nodes); 
               ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/flow_loop_dump/src/obj/cfgloop.o] Error 1
